--- a/packages/terra-clinical-result/src/common/observation/Observation.module.scss
+++ b/packages/terra-clinical-result/src/common/observation/Observation.module.scss
@@ -5,11 +5,12 @@
     color: var(--terra-clinical-result-display-value-color);
     display: inline;
     font-size: var(--terra-clinical-result-display-value-font-size, 1em); // Must use ems for font scaling
+    letter-spacing: var(--terra-clinical-result-display-value-letter-spacing, -0.01428em); // Must use ems for font scaling
     line-height: var(--terra-clinical-result-display-value-line-height, 1.125);
     overflow: visible;
 
     .icon-interpretation {
-      margin-right: var(--terra-clinical-result-display-icon-interpretation-margin-right, 0.1875em); // Must use ems for font scaling
+      margin-right: var(--terra-clinical-result-display-icon-interpretation-margin-right, 0.107em); // Must use ems for font scaling
       position: relative;
       top: var(--terra-clinical-result-display-icon-interpretation-top, 0.15em); // Must use ems for font scaling
       vertical-align: baseline;
