--- a/packages/terra-clinical-result/src/flowsheet-result-cell/FlowsheetResultCell.module.scss
+++ b/packages/terra-clinical-result/src/flowsheet-result-cell/FlowsheetResultCell.module.scss
@@ -6,6 +6,7 @@
     display: flex;
     margin: 0;
     max-width: 100%;  // Needed for IE10 truncation
+    min-width: calc(10em - 2px); // Must use ems for font scaling
     padding: 0;
     width: 100%;
   }
@@ -14,9 +15,9 @@
     align-items: center;
     display: flex;
     flex: 1 1 100%;
-    height: 1.78571em;
+    height: 1.78571em; // Must use ems for font scaling
     margin: 0;
-    margin-left: var(--terra-clinical-result-flowsheet-cell-interpretation-icon-reserved-space-margin-left, 1.1875em); // Must use ems for font scaling
+    margin-left: var(--terra-clinical-result-flowsheet-cell-interpretation-icon-reserved-space-margin-left, 1.107em); // Must use ems for font scaling
     max-width: 100%;  // Needed for IE10 truncation
     overflow: hidden; // Needed for IE10
     padding: 0;
@@ -60,7 +61,7 @@
       .additional-results-value {
         background-color: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-high-background-color, #ffdede);
         border: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-high-border, 1px solid #f00);
-        color: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-high-color, 6a6c6e);
+        color: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-high-color, #6a6c6e);
         font-weight: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-high-font-weight, bold);
 
         &:nth-of-type(2) {
@@ -91,7 +92,7 @@
     display: block;
     height: 100%;
     min-width: 0;
-    padding: var(--terra-clinical-result-flowsheet-cell-additional-results-stack-padding, 0 0.28571em); // Must use ems for font re-scaling
+    padding: var(--terra-clinical-result-flowsheet-cell-additional-results-stack-padding, 0 0.21428em 0 0.14285em); // Must use ems for font re-scaling
     position: relative;
     width: 100%;
   }
@@ -105,10 +106,10 @@
     font-size: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-font-size, 0.92857em); // Must use ems for font re-scaling
     font-weight: var(--terra-clinical-result-flowsheet-cell-font-weight, normal);
     left: 0;
-    line-height: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-line-height, 1.53846);
+    line-height: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-line-height, 1.42308);
     min-width: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-min-width, 1.07142em); // Must use ems for font re-scaling
     overflow: hidden;
-    padding: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-padding, 0 0.21428em); // Must use ems for font re-scaling
+    padding: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-padding, 0 0.14615em 0 0.18461em); // Must use ems for font re-scaling
     position: relative;
     top: 0;
     z-index: 2;
@@ -116,7 +117,7 @@
     &:nth-of-type(2) {
       color: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-2nd-color, #f3f3f3);
       left: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-2nd-left, 0.23076em); // Must use ems for font re-scaling
-      top: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-2nd-top, -1.38461em); // Must use ems for font re-scaling
+      top: var(--terra-clinical-result-flowsheet-cell-additional-results-tile-2nd-top, -1.30769em); // Must use ems for font re-scaling
       z-index: 1;
     }
 
@@ -128,7 +129,7 @@
   .end-accessory-icons {
     display: flex;
     flex: 0 0 auto;
-    height: var(--terra-clinical-result-flowsheet-cell-end-accessory-icon-space-height, 1.78571em); //1.71428em; // Must use ems for font re-scaling
+    height: var(--terra-clinical-result-flowsheet-cell-end-accessory-icon-space-height, 1.78571em); // Must use ems for font re-scaling
     width: var(--terra-clinical-result-flowsheet-cell-end-accessory-icon-space-width, 1em); // Must use ems for font re-scaling
 
     .end-accessory-stack {
