--- a/packages/terra-clinical-result/src/terra-dev-site/doc/example/Examples.module.scss
+++ b/packages/terra-clinical-result/src/terra-dev-site/doc/example/Examples.module.scss
@@ -77,10 +77,9 @@
     border: 1px solid #dedfe0;
     display: inline-block;
     margin-left: -1px;
-    overflow: hidden;
     padding-top: 24px;
     vertical-align: top;
-    width: 162px;
+    width: 140px;
 
     &.half-column {
       width: 99px;
@@ -91,7 +90,7 @@
     }
 
     &.triple-column {
-      width: 477px;
+      width: 472px;
     }
 
     &.flexible50-column {
@@ -146,8 +145,11 @@
     margin: 0;
     max-height: 100%;
     max-width: 100%;  // Needed for IE10 truncation
-    overflow: hidden; // Needed for IE10
     padding: 0;
     width: 100%;
+  }
+
+  .flowsheetresult-minwidth-override--for-testing-only {
+    min-width: 0;
   }
 }
